--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,18 @@
 <app-header></app-header>
+<main>
+
+    <div class="container mt-5">
+        <h3 class="text-center text-black-50">Directive Practice</h3>
+        <ul class="list-group">
+            <li class="list-group-item" appHighlight="red">Cras justo odio</li>
+            <li class="list-group-item" appHighlight="blue">Dapibus ac facilisis in</li>
+            <li class="list-group-item" appHighlight="green">Morbi leo risus</li>
+            <li class="list-group-item" appHighlight="grey">Porta ac consectetur ac</li>
+            <li class="list-group-item" appHighlight="orange">Vestibulum at eros</li>
+        </ul>
+    </div>
+
+
+
+</main>
 <app-footer></app-footer>
