Pipe practice done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <main>
 
     <div class="container mt-5">
-        <h3 class="text-center text-black-50">Directive Practice</h3>
+        <h3 class="text-center text-black-50 mb-3 text-decoration-underline">Directive Practice</h3>
         <ul class="list-group">
             <li class="list-group-item" appHighlight="red">Cras justo odio</li>
             <li class="list-group-item" appHighlight="blue">Dapibus ac facilisis in</li>
@@ -11,6 +11,8 @@
             <li class="list-group-item" appHighlight="orange">Vestibulum at eros</li>
         </ul>
     </div>
+
+    <app-home></app-home>
 
 
 
