--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <main>
-
+    <app-online-status [onlineStatusMessage]="connectionStatusMessage" [onlineStatus]="connectionStatus"></app-online-status>
     <div class="container mt-5">
         <h3 class="text-center text-black-50 mb-3 text-decoration-underline">Directive Practice</h3>
         <ul class="list-group">
@@ -15,6 +15,7 @@
     <app-home></app-home>
 
     <app-users></app-users>
+    
 
 
 
