Implemented Online Status with Navigator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <main>
     <app-online-status [onlineStatusMessage]="connectionStatusMessage" [onlineStatus]="connectionStatus"></app-online-status>
+    <app-navigator-status></app-navigator-status>
     <div class="container mt-5">
         <h3 class="text-center text-black-50 mb-3 text-decoration-underline">Directive Practice</h3>
         <ul class="list-group">
